--- a/js/rfc.html
+++ b/js/rfc.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-	  
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
-  <title>Verifica RFC (persona moral) : Example</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>Verifica RFC: Ejemplo</title>
   <style type="text/css">
 body
 {
@@ -14,6 +13,7 @@ input
 {
 	border: 1px solid #999;
 	margin: 0 5px;
+	text-transform: uppercase;
 }
 .digito_verificador
 {
@@ -31,18 +31,15 @@ input
   </style>
 </head>
 <body>
-
-  <h1>Digito Verificador: Demo</h1>
-
+  <h1>R.F.C. Dígito Verificador: Demo</h1>
   <form method="post" action="">
     <p>
-      <label for="password">Introduzca la clave de su RFC (persona moral):</label>
-        <input type="rfc" name="rfc" id="rfc" value="" size="12"/>
+      <label for="password">Introduzca la clave de su RFC:</label>
+        <input type="rfc" name="rfc" id="rfc" maxlength="13" size="13"/>
     </p>
   </form>
-
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
-  <script type="text/javascript" src="jquery.digito_verificador_moral.js"></script>
+  <script type="text/javascript" src="jquery.digito_verificador.js"></script>
   <script type="text/javascript">
 	$('form').attr('autocomplete', 'off');
 	$('#rfc').digito_verificador();
