--- a/js/rfc.html
+++ b/js/rfc.html
@@ -1,48 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Verifica RFC: Ejemplo</title>
-  <style type="text/css">
-body
-{
-	padding: 50px;
-}
-input
-{
-	border: 1px solid #999;
-	margin: 0 5px;
-	text-transform: uppercase;
-}
-.digito_verificador
-{
-	padding: 0 5px;
-	display: inline-block;
-}
-.digito_verificador_0
-{
-	background-color: #fcb6b1;
-}
-.digito_verificador_1
-{
-	background-color: #fccab1;
-}
-  </style>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery.digito_verificador.js"></script>
+  <script type="text/javascript">
+	$( document ).ready(function() {
+
+		$('#rfc').digito_verificador({
+			legendOnSuccess: "Clave de el R.F.C. verificada.",
+			legendOnFail: "La clave de el R.F.C. no concuerda.",
+			withColors: false
+		}).css('text-transform', 'uppercase');
+
+	});
+  </script>
 </head>
 <body>
   <h1>R.F.C. Dígito Verificador: Demo</h1>
   <form method="post" action="">
     <p>
       <label for="password">Introduzca la clave de su RFC:</label>
-        <input type="rfc" name="rfc" id="rfc" maxlength="13" size="13"/>
+      <input type="rfc" name="rfc" id="rfc" size="20"/>
     </p>
   </form>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
-  <script type="text/javascript" src="jquery.digito_verificador.js"></script>
-  <script type="text/javascript">
-	$('form').attr('autocomplete', 'off');
-	$('#rfc').digito_verificador();
-  </script>
 </body>
 </html>
