Few style adjustments only.

--- a/js/rfc.html
+++ b/js/rfc.html
@@ -11,9 +11,9 @@
 	$( document ).ready(function() {
 
 		$('#rfc').digito_verificador({
-			legendOnSuccess: "Clave de el R.F.C. verificada.",
-			legendOnFail: "La clave de el R.F.C. no concuerda.",
-			withColors: false
+			legendOnSuccess: "Captura correcta.",
+			legendOnFail: "Posible error en la captura.",
+			withColors: true
 		}).css('text-transform', 'uppercase');
 
 	});
