plugin renamed adjustments

--- a/js/rfc.html
+++ b/js/rfc.html
@@ -6,11 +6,11 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Verifica RFC: Ejemplo</title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
-  <script type="text/javascript" src="jquery.digito_verificador.js"></script>
+  <script type="text/javascript" src="jquery.rfc_digito_verificador.js"></script>
   <script type="text/javascript">
 	$( document ).ready(function() {
 
-		$('#rfc').digito_verificador({
+		$( '#rfc' ).rfc_digito_verificador({
 			legendOnSuccess: "Captura correcta.",
 			legendOnFail: "Posible error en la captura.",
 			withColors: true
