--- a/js/rfc.html
+++ b/js/rfc.html
@@ -5,15 +5,12 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Verifica RFC: Ejemplo</title>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
-  <script type="text/javascript" src="jquery.rfc_digito_verificador.js"></script>
+  <script type="text/javascript" src="jquery-ui/js/jquery-1.8.2.min.js"></script>
+  <script type="text/javascript" src="jquery-ui/js/custom/jquery.rfc_digito_verificador.js"></script>
   <script type="text/javascript">
 	$( document ).ready(function() {
 
-		$( '#rfc' ).rfc_digito_verificador({
-			legendOnSuccess: "Captura correcta.",
-			legendOnFail: "Posible error en la captura.",
-			withColors: true
+		$( '#rfc' ).rfc_verificador({
 		}).css('text-transform', 'uppercase');
 
 	});
@@ -22,10 +19,8 @@
 <body>
   <h1>R.F.C. Dígito Verificador: Demo</h1>
   <form method="post" action="">
-    <p>
-      <label for="password">Introduzca la clave de su RFC:</label>
-      <input type="rfc" name="rfc" id="rfc" size="20"/>
-    </p>
+    <label for="password">Introduzca la clave de su RFC:</label>
+    <input type="text" name="rfc" id="rfc" size="13"/>
   </form>
 </body>
 </html>
