--- a/js/rfc.html
+++ b/js/rfc.html
@@ -5,22 +5,51 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Verifica RFC: Ejemplo</title>
-  <script type="text/javascript" src="jquery-ui/js/jquery-1.8.2.min.js"></script>
-  <script type="text/javascript" src="jquery-ui/js/custom/jquery.rfc_digito_verificador.js"></script>
+  <script type="text/javascript" src="jquery-1.6.3.min.js"></script>
+  <script type="text/javascript" src="jquery.rfc_tester.min.js"></script>
   <script type="text/javascript">
 	$( document ).ready(function() {
 
-		$( '#rfc' ).rfc_verificador({
-		}).css('text-transform', 'uppercase');
+		$( '#rfc' ).rfc_tester({
+			nombre: $( '#nombre' ),
+			primerapellido: $( '#paterno' ),
+			segundoapellido: $( '#materno' ),
+			selfcomplete: true,
+			change: function( clave, homonimia, digito ) {
+				console.log("Clave [" + clave + "], Homonimia [" + homonimia + "], digito verificador [" + digito + "]");
+			},
+			success: function( clave ) {
+				$( this ).val( clave );
+			},
+			error: function( message, sugerencia ) {
+				alert( message );
+				console.log("Sugerencia: " + sugerencia );
+			}
+		});
 
 	});
   </script>
 </head>
 <body>
-  <h1>R.F.C. Dígito Verificador: Demo</h1>
-  <form method="post" action="">
-    <label for="password">Introduzca la clave de su RFC:</label>
-    <input type="text" name="rfc" id="rfc" size="13"/>
+  <form id="rfc-form" name="rfc-form">
+    <p>
+    <label for="nombre">Nombre:</label>
+    <input type="text" name="nombre" id="nombre"/>
+    </p>
+    <p>
+    <label for="paterno">Apellido paterno:</label>
+    <input type="text" name="paterno" id="paterno"/>
+    </p>
+    <p>
+    <label for="materno">Apellido materno:</label>
+    <input type="text" name="materno" id="materno"/>
+    </p>
+    <p>
+<!--
+      <button type="submit" name="subit-rfc">Calcula</button>
+-->
+      <input type="text" name="rfc" id="rfc" size="13"/>
+    </p>
   </form>
 </body>
 </html>
